[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jigsaws-pytorch-dataset"
version = "0.1.0"
authors = [
  { name="Juan María Herrera-López", email="juanma56herrera@gmail.com" },
]
description = "Pytorch custom dataset to work with kinematic data from the JIGSAWS surgical dataset."
readme = "README.md"
requires-python = ">=3.12"
license = { text="MIT" }
dependencies = [
    "build>=1.3.0",
    "pandas>=2.3.2",
    "ruff>=0.14.1",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
